[metadata]
name = dalmasgeo
version = 0.0.1
author = Dalmas Otieno
author_email = dalmas@dalicodes.com
description = This is a package the helps to find distance between points in lists or dataframes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaliDalmas/DalmasGeoDistance
project_urls =
    Bug Tracker = https://github.com/DaliDalmas/DalmasGeoDistance/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.0

[options.packages.find]
where = src